--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:id="@+id/newgame"
         android:layout_width="282dp"
         android:layout_height="54dp"
-        android:layout_marginTop="64dp"
-        android:background="@drawable/buttoncorners"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/ripple_effect"
         android:fontFamily="@font/opensanssemibold"
-        android:text="@string/new_game"
-        android:textSize="16dp"
+        android:text="new game"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -26,23 +26,21 @@
         android:id="@+id/aboutBt"
         android:layout_width="282dp"
         android:layout_height="55dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/buttoncorners"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/ripple_effect"
         android:fontFamily="@font/opensanssemibold"
         android:text="@string/about"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newgame"
-        app:layout_constraintVertical_bias="0.186" />
+        app:layout_constraintTop_toBottomOf="@+id/newgame" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="197dp"
         android:layout_height="217dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
@@ -52,7 +50,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="monospace"
         android:text="D I Z E R"
         android:textAlignment="center"
@@ -61,6 +59,7 @@
         android:textColor="#FFFFFF"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -77,6 +76,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="20dp" />
+
+    <ImageView
+        android:id="@+id/rules"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aboutBt"
+        app:srcCompat="@drawable/rules" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
