--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#EEEEEE</color>
     <color name="orange">#fc611f</color>
+    <color name="green">#228B22</color>
 </resources>
